force-app/main/default/objects/Customer_Tax_Category_Application__c/Customer_Tax_Category_Application__c.object-meta.xml
<CustomObject>
    <label>Customer Tax Category Application</label>
    <nameField>
        <displayFormat>CTCA-{000000}</displayFormat>
        <label>Customer Tax Category Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Tax Category Application</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>