force-app/main/default/objects/Customer_Tax_Category_Application__c/fields/Customer_Sales_Info_Change_Application__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Info_Change_Application__c</fullName>
    <label>Customer Sales Info Change Application</label>
    <referenceTo>Customer_Sales_Info_Change_Application__c</referenceTo>
    <relationshipLabel>Customer Tax Category Application</relationshipLabel>
    <relationshipName>Customer_Tax_Category_Application</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>