force-app/main/default/objects/Customer_Tax_Category_Application__c/fields/Customer_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Tax Category</label>
    <referenceTo>Customer_Tax_Category__c</referenceTo>
    <relationshipLabel>Customer Tax Category Application</relationshipLabel>
    <relationshipName>Customer_Tax_Category_Application</relationshipName>
    <type>Lookup</type>
</CustomField>