force-app/main/default/objects/Customer_Tax_Category_Application__c/fields/Old_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Old_Tax_Category__c</fullName>
    <label>Old Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Category</valueSetName>
    </valueSet>
</CustomField>